...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/create_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
...
